chapter-10/canary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: interview-app-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: interview-app
    layer: frontend
