chapter-10/canary-deploy-istio-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: interview-app-virtualservice
spec:
  hosts:
  - interview-app-service
  http:
  - route:
    - destination:
        host: interview-app-service
        subset: stable
      weight: 90
    - destination:
        host: interview-app-service
        subset: canary
      weight: 10
